infra/kustomize/overlays/internal/yamls/bundestagio-admin-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bundestagio-admin-depl
spec:
  selector:
    matchLabels:
      app: bundestagio-admin
  template:
    spec:
      containers:
        - name: bundestagio-admin
          resources:
            limits:
              memory: "500Mi"
              cpu: "1000m"
            requests:
              memory: "150Mi"
              cpu: "100m"
