infra/kustomize/overlays/internal/yamls/democracy-app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: democracy-app-depl
spec:
  selector:
    matchLabels:
      app: democracy-app
  template:
    spec:
      containers:
        - name: democracy-app
          resources:
            limits:
              memory: "300Mi"
              cpu: "500m"
            requests:
              memory: "300Mi"
              cpu: "500m"
