infra/kustomize/overlays/internal/yamls/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - internal.api.democracy-app.de
        - internal.democracy-app.de
        - internal.qr.democracy-app.de
        - internal.api.bundestag.io
        - internal.admin.bundestag.io
        - internal.dip.bundestag.io
      secretName: democracy-internal-tls
  rules:
    - host: internal.api.democracy-app.de
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: democracy-api-srv
                port:
                  number: 3000
    - host: internal.democracy-app.de
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: democracy-app-srv
                port:
                  number: 3000
    - host: internal.qr.democracy-app.de
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: qr-code-handler-srv
                port:
                  number: 3000
    - host: internal.api.bundestag.io
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: bundestagio-srv
                port:
                  number: 3100
    - host: internal.admin.bundestag.io
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: bundestagio-admin-srv
                port:
                  number: 3000
    - host: internal.dip.bundestag.io
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: bundestagio-dip-srv
                port:
                  number: 3101
